prevents avatar image from getting squished (anywhere)

--- a/src/pages/Profile/css/index.css
+++ b/src/pages/Profile/css/index.css
@@ -35,10 +35,6 @@
   margin-bottom: 11px;
 }
 
-.profile-avatar img {
-  object-fit: cover;
-}
-
 .profile-name {
   font-size: 18px;
   font-weight: bold;
